@@ -1,9 +1,8 @@
 package org.jusecase.builders.generator;
 
-import org.apache.commons.io.IOUtils;
-
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 
 import static org.jusecase.Builders.an;
 import static org.jusecase.Builders.inputStream;
@@ -13,7 +12,7 @@ public class Template {
 
     public static Template fromResource(String resourceName) throws IOException {
         try (InputStream is = an(inputStream().withResource(resourceName))) {
-            return new Template(IOUtils.toString(is));
+            return new Template(new String(is.readAllBytes(), StandardCharsets.UTF_8));
         }
     }
 
